# KrishLLM

./: CMakeLists.txt  Makefile  README.md  demo_output.txt  main.cpp  schematic.md
